situation_api.h

typedef union Vector2 {
    struct { float x, y; };
    float raw[2];
} Vector2;
typedef enum {
    SIT_RENDERER_OPENGL,
    SIT_RENDERER_VULKAN
} SituationRendererType;
typedef struct {
    uint32_t slot_index;
    uint32_t generation;
    int index_count;        
    int vertex_count;       
    size_t vertex_stride;   
} SituationMesh;
typedef struct {
    uint32_t slot_index;    
    uint32_t generation;    
    int width;              
    int height;             
} SituationTexture;
typedef struct {
    int      id;                     
    Vector2  resolution;             
    Vector2  offset;                 
    float    opacity;                
    bool     visible;                
    int      z_order;                
    uint64_t frame_count;                
    double   frame_time_multiplier;      
    double   elapsed_time_seconds;       
    float    cycle_animation_value;      
    double   last_update_time_seconds;   
    double   frame_delta_time_seconds;   
    bool                    is_dirty;       
    SituationScalingMode    scaling_mode;   
    SituationBlendMode      blend_mode;     
#if defined(SITUATION_IMPLEMENTATION)
#if defined(SITUATION_USE_VULKAN)
    struct {
        VkImage         image;               
        VmaAllocation   image_memory;        
        VkImageView     image_view;          
        VkImage         depth_image;         
        VmaAllocation   depth_image_memory;  
        VkImageView     depth_image_view;    
        VkFramebuffer   framebuffer;         
        VkSampler       sampler;             
        VkRenderPass    render_pass;         
        VkDescriptorSet descriptor_set;      
        VkDescriptorPool descriptor_pool;    
    } vk;
#elif defined(SITUATION_USE_OPENGL)
    struct {
        GLuint fbo_id;          
        GLuint texture_id;      
        GLuint depth_rbo_id;    
    } gl;
#endif
#else
    struct {
        uint64_t _internal_handle_1;
        uint64_t _internal_handle_2;
        uint64_t _internal_handle_3;
    } gl;
#endif
} SituationVirtualDisplay;
typedef struct SituationFont {
    void *fontData;                                 
    void *stbFontInfo;                              
    SituationTexture atlas_texture;
    void* glyph_info; 
    int atlas_width;
    int atlas_height;
    float font_height_pixels; 
    bool is_bitmap;
    const unsigned char* bitmap_data;
    int bitmap_width;   
    int bitmap_height;  
    int bitmap_count;   
} SituationFont;
typedef struct {
    uint32_t slot_index;
    uint32_t generation;
} SituationSound;
SITAPI const char* SituationGetVersionString(void); 									
SITAPI char* SituationGetUserDirectory(void);                                           
SITAPI int SituationGetScreenWidth(void);                                               
SITAPI int SituationGetScreenHeight(void);                                              
SITAPI int SituationGetRenderWidth(void);                                               
SITAPI int SituationGetRenderHeight(void);                                              
SITAPI int SituationGetMonitorCount(void);                                              
SITAPI const char* SituationGetMonitorName(int monitor_id);                             
SITAPI int SituationGetMonitorWidth(int monitor_id);                                    
SITAPI int SituationGetMonitorHeight(int monitor_id);                                   
SITAPI int SituationGetMonitorPhysicalWidth(int monitor_id);                            
SITAPI int SituationGetMonitorPhysicalHeight(int monitor_id);                           
SITAPI int SituationGetMonitorRefreshRate(int monitor_id);                              
SITAPI Vector2 SituationGetMonitorPosition(int monitor_id);                             
SITAPI uint64_t SituationGetVRAMUsage(void);     										
SITAPI size_t SituationGetRenderQueueDepth(void);                                       
SITAPI void SituationGetRenderLatencyStats(uint64_t* avg_ns, uint64_t* max_ns);         
SITAPI uint64_t SituationGetTextureHandle(SituationTexture texture);                    
SITAPI void SituationGetMaxComputeWorkGroups(uint32_t* x, uint32_t* y, uint32_t* z); 
SITAPI SituationVirtualDisplay* SituationGetVirtualDisplay(int display_id);             
SITAPI void SituationGetVirtualDisplaySize(int display_id, int* width, int* height);    
SITAPI void SituationGetMeshData(SituationMesh mesh, void** vertex_data, int* vertex_count, int* vertex_stride, void** index_data, int* index_count);
SITAPI SituationRendererType SituationGetRendererType(void);                            
SITAPI VkDevice SituationGetVulkanDevice(void);                                         
SITAPI VkRenderPass SituationGetMainWindowRenderPass(void);                             
SITAPI Vector2 SituationGetMousePosition(void);                                         
SITAPI Vector2 SituationGetMouseDelta(void);                                            
SITAPI float SituationGetMouseWheelMove(void);                                          
SITAPI Vector2 SituationGetMouseWheelMoveV(void);                                       
SITAPI float SituationGetSoundVolume(SituationSound* sound);                            
SITAPI float SituationGetSoundPan(SituationSound* sound);                               
SITAPI float SituationGetSoundPitch(SituationSound* sound);                             