sit/situation_api_audio.h

SITAPI void SituationGetMasterOutputMeter(float* out_peak, float* out_rms); 
SITAPI int SituationGetRegisteredDeviceCount(void);                                     
SITAPI SituationNode* SituationGetNode(SituationAudioGraph* graph, SituationNodeHandle handle); 
SITAPI uint32_t SituationGetNodePCMFreeFrames(SituationAudioGraph* graph, SituationNodeHandle node); 
SITAPI SituationError SituationGetMidiDeviceName(int device_id, char* out_name, size_t out_name_size);                    
SITAPI const char* SituationGetSerializationVersion(void);                              