wrappers/python/situation/foreign.py


    if hasattr(dll, 'SituationGetMainWindowRenderPass'):
        dll.SituationGetMainWindowRenderPass.argtypes = []
        dll.SituationGetMainWindowRenderPass.restype = c_void_p

    if hasattr(dll, 'SituationGetMasterOutputMeter'):
        dll.SituationGetMasterOutputMeter.argtypes = [POINTER(c_float), POINTER(c_float)]
        dll.SituationGetMasterOutputMeter.restype = None

    if hasattr(dll, 'SituationGetMaxComputeWorkGroups'):
        dll.SituationGetMaxComputeWorkGroups.argtypes = [POINTER(c_uint32), POINTER(c_uint32), POINTER(c_uint32)]
        dll.SituationGetMaxComputeWorkGroups.restype = None

    if hasattr(dll, 'SituationGetMaxFrameTime'):
        dll.SituationGetMaxFrameTime.argtypes = []
        dll.SituationGetMaxFrameTime.restype = c_double

    if hasattr(dll, 'SituationGetMemoryInfo'):
        dll.SituationGetMemoryInfo.argtypes = [POINTER(T.SituationMemoryInfo)]
        dll.SituationGetMemoryInfo.restype = None

    if hasattr(dll, 'SituationGetMeshData'):
        dll.SituationGetMeshData.argtypes = [T.SituationMesh, c_void_p, POINTER(c_int), POINTER(c_int), c_void_p, POINTER(c_int)]
        dll.SituationGetMeshData.restype = None

    if hasattr(dll, 'SituationGetMeshIndexBufferAddress'):
        dll.SituationGetMeshIndexBufferAddress.argtypes = [T.SituationMesh]
        dll.SituationGetMeshIndexBufferAddress.restype = c_uint64

    if hasattr(dll, 'SituationGetMeshVertexBufferAddress'):
        dll.SituationGetMeshVertexBufferAddress.argtypes = [T.SituationMesh]
        dll.SituationGetMeshVertexBufferAddress.restype = c_uint64

    if hasattr(dll, 'SituationGetMeshVertexLayout'):
        dll.SituationGetMeshVertexLayout.argtypes = [T.SituationMesh, POINTER(c_int)]
        dll.SituationGetMeshVertexLayout.restype = c_int

    if hasattr(dll, 'SituationGetMidiDeviceName'):
        dll.SituationGetMidiDeviceName.argtypes = [c_int, c_char_p, c_size_t]
        dll.SituationGetMidiDeviceName.restype = c_int

    if hasattr(dll, 'SituationGetMonitorCount'):
        dll.SituationGetMonitorCount.argtypes = []
        dll.SituationGetMonitorCount.restype = c_int

    if hasattr(dll, 'SituationGetMonitorHeight'):
        dll.SituationGetMonitorHeight.argtypes = [c_int]
        dll.SituationGetMonitorHeight.restype = c_int

    if hasattr(dll, 'SituationGetMonitorName'):
        dll.SituationGetMonitorName.argtypes = [c_int]
        dll.SituationGetMonitorName.restype = c_char_p

    if hasattr(dll, 'SituationGetMonitorPhysicalHeight'):
        dll.SituationGetMonitorPhysicalHeight.argtypes = [c_int]
        dll.SituationGetMonitorPhysicalHeight.restype = c_int

    if hasattr(dll, 'SituationGetMonitorPhysicalWidth'):
        dll.SituationGetMonitorPhysicalWidth.argtypes = [c_int]
        dll.SituationGetMonitorPhysicalWidth.restype = c_int

    if hasattr(dll, 'SituationGetMonitorPosition'):
        dll.SituationGetMonitorPosition.argtypes = [c_int]
        dll.SituationGetMonitorPosition.restype = T.Vector2

    if hasattr(dll, 'SituationGetMonitorRefreshRate'):
        dll.SituationGetMonitorRefreshRate.argtypes = [c_int]
        dll.SituationGetMonitorRefreshRate.restype = c_int

    if hasattr(dll, 'SituationGetMonitorWidth'):
        dll.SituationGetMonitorWidth.argtypes = [c_int]
        dll.SituationGetMonitorWidth.restype = c_int

    if hasattr(dll, 'SituationGetMouseDelta'):
        dll.SituationGetMouseDelta.argtypes = []
        dll.SituationGetMouseDelta.restype = T.Vector2

    if hasattr(dll, 'SituationGetMousePosition'):
        dll.SituationGetMousePosition.argtypes = []
        dll.SituationGetMousePosition.restype = T.Vector2

    if hasattr(dll, 'SituationGetMouseWheelMove'):
        dll.SituationGetMouseWheelMove.argtypes = []
        dll.SituationGetMouseWheelMove.restype = c_float

    if hasattr(dll, 'SituationGetMouseWheelMoveV'):
        dll.SituationGetMouseWheelMoveV.argtypes = []
        dll.SituationGetMouseWheelMoveV.restype = T.Vector2

    if hasattr(dll, 'SituationGetNetworkAdapterCount'):
        dll.SituationGetNetworkAdapterCount.argtypes = []
        dll.SituationGetNetworkAdapterCount.restype = c_int

    if hasattr(dll, 'SituationGetNetworkAdapterName'):
        dll.SituationGetNetworkAdapterName.argtypes = [c_int, c_char_p, c_int]
        dll.SituationGetNetworkAdapterName.restype = c_bool

    if hasattr(dll, 'SituationGetNode'):
        dll.SituationGetNode.argtypes = [c_void_p, c_uint32]
        dll.SituationGetNode.restype = c_void_p

    if hasattr(dll, 'SituationGetNodePCMFreeFrames'):
        dll.SituationGetNodePCMFreeFrames.argtypes = [c_void_p, c_uint32]
        dll.SituationGetNodePCMFreeFrames.restype = c_uint32

    if hasattr(dll, 'SituationGetNumaTopology'):
        dll.SituationGetNumaTopology.argtypes = [POINTER(T.SituationNumaTopology)]
        dll.SituationGetNumaTopology.restype = c_int

    if hasattr(dll, 'SituationGetOSInfo'):
        dll.SituationGetOSInfo.argtypes = []
        dll.SituationGetOSInfo.restype = T.SituationOSInfo

    if hasattr(dll, 'SituationGetPreferredNumaNode'):
        dll.SituationGetPreferredNumaNode.argtypes = []
        dll.SituationGetPreferredNumaNode.restype = c_int

    if hasattr(dll, 'SituationGetProcessList'):
        dll.SituationGetProcessList.argtypes = [POINTER(c_int)]
        dll.SituationGetProcessList.restype = POINTER(T.SituationProcessInfo)

    if hasattr(dll, 'SituationGetQueueDepth'):
        dll.SituationGetQueueDepth.argtypes = [c_void_p, c_int]
        dll.SituationGetQueueDepth.restype = c_size_t

    if hasattr(dll, 'SituationGetRecommendedWorkerCount'):
        dll.SituationGetRecommendedWorkerCount.argtypes = [c_uint32, c_bool]
        dll.SituationGetRecommendedWorkerCount.restype = c_uint32

    if hasattr(dll, 'SituationGetRegisteredDeviceCount'):
        dll.SituationGetRegisteredDeviceCount.argtypes = []
        dll.SituationGetRegisteredDeviceCount.restype = c_int

    if hasattr(dll, 'SituationGetRenderHeight'):
        dll.SituationGetRenderHeight.argtypes = []
        dll.SituationGetRenderHeight.restype = c_int

    if hasattr(dll, 'SituationGetRenderLatencyStats'):
        dll.SituationGetRenderLatencyStats.argtypes = [POINTER(c_uint64), POINTER(c_uint64)]
        dll.SituationGetRenderLatencyStats.restype = None

    if hasattr(dll, 'SituationGetRenderQueueDepth'):
        dll.SituationGetRenderQueueDepth.argtypes = []
        dll.SituationGetRenderQueueDepth.restype = c_size_t

    if hasattr(dll, 'SituationGetRenderWidth'):
        dll.SituationGetRenderWidth.argtypes = []
        dll.SituationGetRenderWidth.restype = c_int

    if hasattr(dll, 'SituationGetRendererType'):
        dll.SituationGetRendererType.argtypes = []
        dll.SituationGetRendererType.restype = c_int

    if hasattr(dll, 'SituationGetScreenHeight'):
        dll.SituationGetScreenHeight.argtypes = []
        dll.SituationGetScreenHeight.restype = c_int

    if hasattr(dll, 'SituationGetScreenWidth'):
        dll.SituationGetScreenWidth.argtypes = []
        dll.SituationGetScreenWidth.restype = c_int

    if hasattr(dll, 'SituationGetScreenshotFormat'):
        dll.SituationGetScreenshotFormat.argtypes = []
        dll.SituationGetScreenshotFormat.restype = c_int

    if hasattr(dll, 'SituationGetSerializationVersion'):
        dll.SituationGetSerializationVersion.argtypes = []
        dll.SituationGetSerializationVersion.restype = c_char_p

    if hasattr(dll, 'SituationGetSoundPan'):
        dll.SituationGetSoundPan.argtypes = [POINTER(T.SituationSound)]
        dll.SituationGetSoundPan.restype = c_float

    if hasattr(dll, 'SituationGetSoundPitch'):
        dll.SituationGetSoundPitch.argtypes = [POINTER(T.SituationSound)]
        dll.SituationGetSoundPitch.restype = c_float

    if hasattr(dll, 'SituationGetSoundVolume'):
        dll.SituationGetSoundVolume.argtypes = [POINTER(T.SituationSound)]
        dll.SituationGetSoundVolume.restype = c_float

    if hasattr(dll, 'SituationGetStorageDevice'):
        dll.SituationGetStorageDevice.argtypes = [c_int, c_char_p, c_int, POINTER(c_uint64), POINTER(c_uint64)]
        dll.SituationGetStorageDevice.restype = c_bool

    if hasattr(dll, 'SituationGetStorageDeviceCount'):
        dll.SituationGetStorageDeviceCount.argtypes = []
        dll.SituationGetStorageDeviceCount.restype = c_int

    if hasattr(dll, 'SituationGetTextLineCount'):
        dll.SituationGetTextLineCount.argtypes = [T.SituationFont, c_float]
        dll.SituationGetTextLineCount.restype = c_int

    if hasattr(dll, 'SituationGetTextureHandle'):
        dll.SituationGetTextureHandle.argtypes = [T.SituationTexture]
        dll.SituationGetTextureHandle.restype = c_uint64

    if hasattr(dll, 'SituationGetTextureInfo'):
        dll.SituationGetTextureInfo.argtypes = [T.SituationTexture, POINTER(T.SituationTextureInfo)]
        dll.SituationGetTextureInfo.restype = c_int

    if hasattr(dll, 'SituationGetThreadAffinity'):
        dll.SituationGetThreadAffinity.argtypes = [POINTER(c_uint64)]
        dll.SituationGetThreadAffinity.restype = c_int

    if hasattr(dll, 'SituationGetThreadNumaNode'):
        dll.SituationGetThreadNumaNode.argtypes = []
        dll.SituationGetThreadNumaNode.restype = c_int

    if hasattr(dll, 'SituationGetThreadPoolMetrics'):
        dll.SituationGetThreadPoolMetrics.argtypes = [c_void_p, POINTER(T.SituationThreadPoolMetrics)]
        dll.SituationGetThreadPoolMetrics.restype = c_int

    if hasattr(dll, 'SituationGetThreadPoolSnapshot'):
        dll.SituationGetThreadPoolSnapshot.argtypes = [c_void_p, POINTER(T.SituationThreadPoolSnapshot)]
        dll.SituationGetThreadPoolSnapshot.restype = c_int

    if hasattr(dll, 'SituationGetThreadingStatus'):
        dll.SituationGetThreadingStatus.argtypes = []
        dll.SituationGetThreadingStatus.restype = T.SituationThreadingStatus

    if hasattr(dll, 'SituationGetUserDirectory'):
        dll.SituationGetUserDirectory.argtypes = []
        dll.SituationGetUserDirectory.restype = c_char_p

    if hasattr(dll, 'SituationGetVRAMUsage'):
        dll.SituationGetVRAMUsage.argtypes = []
        dll.SituationGetVRAMUsage.restype = c_uint64

    if hasattr(dll, 'SituationGetVersionString'):
        dll.SituationGetVersionString.argtypes = []
        dll.SituationGetVersionString.restype = c_char_p

    if hasattr(dll, 'SituationGetVirtualDisplay'):
        dll.SituationGetVirtualDisplay.argtypes = [c_int]
        dll.SituationGetVirtualDisplay.restype = c_void_p

    if hasattr(dll, 'SituationGetVirtualDisplayPatternConfig'):
        dll.SituationGetVirtualDisplayPatternConfig.argtypes = [c_int, c_void_p]
        dll.SituationGetVirtualDisplayPatternConfig.restype = None

    if hasattr(dll, 'SituationGetVirtualDisplayPatternLayers'):
        dll.SituationGetVirtualDisplayPatternLayers.argtypes = [c_int]
        dll.SituationGetVirtualDisplayPatternLayers.restype = c_int32

    if hasattr(dll, 'SituationGetVirtualDisplaySize'):
        dll.SituationGetVirtualDisplaySize.argtypes = [c_int, POINTER(c_int), POINTER(c_int)]
        dll.SituationGetVirtualDisplaySize.restype = None

    if hasattr(dll, 'SituationGetVirtualDisplayTexture'):
        dll.SituationGetVirtualDisplayTexture.argtypes = [c_int, POINTER(T.SituationTexture)]
        dll.SituationGetVirtualDisplayTexture.restype = c_int

    if hasattr(dll, 'SituationGetVirtualDisplayUpdateInfo'):
        dll.SituationGetVirtualDisplayUpdateInfo.argtypes = [c_int, POINTER(c_double), POINTER(c_uint64), POINTER(c_uint64), POINTER(c_double)]
        dll.SituationGetVirtualDisplayUpdateInfo.restype = c_int

    if hasattr(dll, 'SituationGetVulkanDevice'):
        dll.SituationGetVulkanDevice.argtypes = []
        dll.SituationGetVulkanDevice.restype = c_void_p
